# embeddock

./: Makefile  README.md  embeddock.cabal
exe-src/: main.hs
src/: Embeddock.hs  main.hs
