name:                embeddock
version:             0.4.0.1
synopsis:            Here documents and haddock documentations with ability to embed expressions
description:         embeddock is a Haskell source-code preprocessor. 
                     It allows you to embed computer-generated 
                     values in the documentation.
                     

homepage:            https://github.com/nushio3/embeddock
bug-reports:         https://github.com/nushio3/embeddock/issues

license:             BSD3
license-file:        LICENSE
author:              Takayuki Muranushi
maintainer:          muranushi@gmail.com
-- copyright:           
category:            Documentation
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  exposed-modules:   Embeddock
                     Embeddock.Option
  build-depends:     base >=4.5 && <5
                   , cmdargs >= 0.10.3

executable embeddock
  main-is:           main.hs
  hs-source-dirs:    exe-src/
  build-depends:     base >=4.5 && <5
                   , embeddock >= 0.4.0.1
                   , filepath >= 1.3
                   , haskell-lexer >= 1.0
                   , lens >= 3.9.0.2
                   , MissingH >= 1.2
                   , process >= 0.9

Source-Repository head
  Type:              git
  Location:          https://github.com/nushio3/embeddock
